# MSCHelper

./: Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
config/: about_message_id.txt  chat_role_message_id.txt
src/bot/: bot.py
src/cogs/: AntiScam.py  Antispam.py  DiscordLinkDetection.py  autoping.py  moderation.py  mscfriends.py  privatevoices.py  scam_model.pkl  vectorizer.pkl
src/train/: train_model.ipynb
