[project]
name = "MSCHelper"
version = "0.1.0"
dependencies = ["disnake", "numpy", "scikit-learn", "requests", "ruff>=0.11.1"]

[tool.poetry]
name = "MSCHelper"
version = "0.0.1"
description = ""
authors = ["xdearboy"]
license = "MIT"

requires-python = ">=3.13"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
